Testing fix to overflow issue.

--- a/app-front/src/app/main/main.component.sass
+++ b/app-front/src/app/main/main.component.sass
@@ -22,6 +22,9 @@
   .main-wrapper
     padding-left: 0
     padding-right: 0
+    .row
+      margin-left: 0!important
+      margin-right: 0!important
 
 @media screen and (max-width: $screen-xs-max)
   .main-segment
